test/1.2/errors/T_ENVAL_param_site.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
/// ERROR ENVAL
parameter p = [];
method init {
    /// ERROR ENVAL
    $p;
}
